test/testdata/classes/methods/static/property_accessors/setter_not_enough_params_error.lox
class Foo {
  static get bar() {}

  // error: property setter must have a parameter
  // lint error: property setter must have a parameter
  static set bar() {}
}

_ = Foo;
